# HC-SR501-Node-Red-Presence-Detector

./: .dockerignore  .gitignore  .mega-linter.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  IMPROVEMENTS.md  README.md  ReadMe.md  build.rs
.github/: CODEOWNERS  dependabot.yaml
.github/workflows/: Static Analysis.yml  continuous-build.yaml  dependabot.yaml  megalinter.yaml  release-please.yaml  release-plz.yaml
cmd/: main.go
docs/: system-diagram.puml
examples/: docker-compose.yaml  mock_transmitter.rs  receiver.rs
examples/docker/: docker-compose.yaml  mosquitto.conf
examples/docker/config/: mosquitto.conf
examples/node-red/: timer_flow.json
internal/configuration/: ConfigurationFields.go  EnvironmentConfigurator.go  IConfigurator.go
internal/connectivity/: ConnectivityFactory.go  IConnector.go  MqttConnector.go  TCPConnector.go
internal/sensing/: ISensing.go  SensingFactory.go
pkg/sensors/: HCSR04PresenceSensor.go  IPresenceSensor.go  PresenceDetectorFactory.go
src/: Dockerfile  PresenceDetector.py  config.rs  docker-compose.yml  main.rs  pins.rs  transmit.rs
